# ReverseDemo

./: settings.gradle.kts
composeApp/: build.gradle.kts
composeApp/src/androidMain/kotlin/org/hahouari/reverse_demo/: MainActivity.kt
composeApp/src/desktopMain/kotlin/: main.kt
gradle/: libs.versions.toml
iosApp/Configuration/: Config.xcconfig
rust/: Cargo.toml
rust/src/: reverse.udl
