[package]
name = "reverse-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "reverse"
crate-type = ["cdylib"]

[profile.release]
# or "z"
opt-level = 3

[dependencies]
uniffi = { version = "0.25.3", features = ["cli"] }

[build-dependencies]
uniffi = { version = "0.25.3", features = [ "build" ] }

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"